Moved to HikariCP and Log4j